2009-06-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
		Add help dialog and about box.
	* src/dvbcut_en.html:
		Initial (rudimentary) help file.
	* DISTFILES:
		Add dvbcut_en.html.
	* src/Makefile.in:
		Install dvbcut_en.html.

2009-06-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/stream.h:
		Make non-interlaced video the default.

2009-06-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* makefile.in:
		Allow parallel (make -j<n>) install.

2009-06-26  Michael Riepe  <too-tired@users.sourceforge.net>

	* import/stdlib.h:
		Use #include_next <stdlib.h> instead of a fixed path.
		
2009-06-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/mpegmuxer.cpp:
		Fix gcc 4.4 build.

2009-06-19  Dominik Kopp  <my@kabelfunk.de>  (mr)

	* contrib/AR_to_169:
	* contrib/AR_to_43:
		Add missing quotes.

2009-06-09  Michael Riepe  <too-tired@users.sourceforge.net>

	* contrib:
		New directory
	* contrib/AR_to_169:
	* contrib/AR_to_43:
		New scripts to force an aspect ratio of 16:9 or
		4:3. Contributed by Dominik Kopp.
	* DISTFILES:
		Add new files to distribution list.

2009-02-11  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.in:
		Generate all sources before calling setversion.sh.
 
2009-01-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* configure.in:
		Also link with -lm when looking for liba52.

2009-01-24  Michael Riepe  <too-tired@users.sourceforge.net>

	* VERSION:
		Bump up to 0.6.0.

	* README:
		Edit for release.

	* INSTALL:
		Remove references to scons.

	* Makefile:
		Tell people to run configure instead of scons.

	* SConstruct:
	* SConscript.ffmpeg:
	* src/SConscript:
		Remove.

	* DISTFILES:
		Remove SConstruct, SConscript.ffmpeg and src/SConscript.

	* configure.in:
		Pass configure args to Makefiles.

	* makefile.in:
		Generate new version.h for tarball.
		Pass configure args to "make check-dist".
 